# EvaEdit

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: setting.json  settings_schema.json  settings_t.json  state.json  state_schema.json  state_t.json  user_settings.json  user_settings_t.json
docs/: deploy.md
docs/architecture/: file-size.md
docs/components/: EditEngine.md
installer/: win_setup.iss
qml/: CMakeLists.txt  Colors.qml  EEditor.qml  EFileView.qml  EMenu.qml  EMenuBar.qml  ESidebar.qml  ETabView.qml  Main.qml  WindowDragHandler.qml  qmldir
qml/actions/: MenuActions.js
qml/common/: Colors.qml  EConstants.qml
qml/components/: EAboutDialog.qml  EDialogs.qml  EMenu.qml  EMenuBar.qml  ResizeButton.qml
qml/handlers/: ResizeButton.qml
qml/themes/: DarkTheme.qml  LightTheme.qml
qml/views/: EEditor.qml  EFileView.qml  EOutlineView.qml  ESidePanel.qml  ESidebar.qml  ETabView.qml  ETextEditor.qml
src/: CMakeLists.txt  main.cpp
src/common/: AppConstants.h  CMakeLists.txt
src/config/: CMakeLists.txt  ConfigCenter.cpp  ConfigCenter.h  ConfigKeys.cpp  ConfigKeys.h  ConfigPaths.cpp  ConfigPaths.h
src/controller/: CMakeLists.txt  FileController.cpp  FileController.h  TabController.cpp  TabController.h
src/editor/: CMakeLists.txt
src/editor/controller/: TextEditorController.cpp  TextEditorController.h
src/editor/core/: DocumentModel.cpp  DocumentModel.h  TextStorage.cpp  TextStorage.h  UndoSystem.cpp  UndoSystem.h
src/editor/interaction/: CursorManager.cpp  CursorManager.h  InputHandler.cpp  InputHandler.h  InputManager.cpp  InputManager.h  SelectionManager.cpp  SelectionManager.h
src/editor/render/: MiniMapRenderer.cpp  MiniMapRenderer.h  TextRenderer.cpp  TextRenderer.h
src/editor/service/: LayoutEngine.cpp  LayoutEngine.h  SearchService.cpp  SearchService.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TokenTypes.h
src/logger/: CMakeLists.txt  Logger.cpp  Logger.h  QmlLoggerWrapper.h
src/model/: CMakeLists.txt  FileSystemModel.cpp  FileSystemModel.h  LineNumberModel.cpp  LineNumberModel.h
