add_subdirectory(model)
add_subdirectory(config)
add_subdirectory(logger)
add_subdirectory(common)
add_subdirectory(controller)
add_subdirectory(editor)

set(SRC_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
)

# 让上级目录可以访问这些源文件
set(SRC_SOURCES ${SRC_SOURCES} PARENT_SCOPE)
set(RELATIVE_MODEL_SOURCES ${RELATIVE_MODEL_SOURCES} PARENT_SCOPE)
set(RELATIVE_CONFIG_SOURCES ${RELATIVE_CONFIG_SOURCES} PARENT_SCOPE)
set(RELATIVE_LOGGER_SOURCES ${RELATIVE_LOGGER_SOURCES} PARENT_SCOPE)
set(RELATIVE_COMMON_SOURCES ${RELATIVE_COMMON_SOURCES} PARENT_SCOPE)
set(RELATIVE_CONTROLLER_SOURCES ${RELATIVE_CONTROLLER_SOURCES} PARENT_SCOPE)
set(RELATIVE_EDITOR_SOURCES ${RELATIVE_EDITOR_SOURCES} PARENT_SCOPE)